--- a/src/CleanArchitecture.WebUI.Angular/ClientApp/src/app/home/home.component.html
+++ b/src/CleanArchitecture.WebUI.Angular/ClientApp/src/app/home/home.component.html
@@ -1,14 +1,17 @@
 <p>CleanArchitecture.Net WebUI built with:</p>
 <p class="text-center"><img src="assets/img/AngularJS_google.png" width="160" height="89"></p>
 <ul>
-  <li><a href='https://get.asp.net/'>ASP.NET Core 3.0</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-  <li><a href='https://angular.io/'>Angular</a> 8.1.3 and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-  <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
+  <li><a href='https://get.asp.net/' target="_blank">ASP.NET Core 3.0</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx' target="_blank">C#</a> for cross-platform server-side code</li>
+  <li><a href='https://angular.io/' target="_blank">Angular</a> 8.1.3 and <a href='http://www.typescriptlang.org/' target="_blank">TypeScript</a> for client-side code</li>
+  <li><a href='http://getbootstrap.com/' target="_blank">Bootstrap</a> for layout and styling</li>
 </ul>
+<p>&nbsp;</p>
 <p>This VS 2019 project consists of an Angular UI built on Node 10.15.3. The UI serves data from an MSSQL 2017 database via a .Net Core REST API developed with SOLID design & Clean Architecture principles. The data consists of the following:</p>
 <ul>
   <li><strong>Categories</strong>: Category table which contains product categorizations.</li>
   <li><strong>Products</strong>: Product table which contains product definitions.</li>
-  <li><strong>Data Relations</strong>: Each item in the product table contains a foreign key to the category. The Entity Framework ORM also provides a a one-to-many relationship for all products of a category.</li>
 </ul>
-<p>The UI facilitates CRUD operations to the database tables.</p>
+<p>The UI facilitates CRUD operations to the database tables through the API.</p>
+<p>&nbsp;</p>
+<p>The entire Visual Studio 2019 solution can be found on GitHub here:</p>
+<p><a href='https://github.com/sgregory32/CleanArchitecture.Net' target="_blank">https://github.com/sgregory32/CleanArchitecture.Net</a></p>
